[project]
name = "comfyui_mexx_poster"
description = "Nodes: ComfyUI_Mexx_Poster"
version = "1.0.0"
license = "LICENSE"
dependencies = ["html2image"]

[project.urls]
Repository = "https://github.com/SoftMeng/ComfyUI_Mexx_Poster"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Mexx_Poster"
Icon = ""
